# home-work-05

./: CMakeLists.txt  Doxyfile  EditorController.cpp  EditorController.h  EditorModel.cpp  EditorModel.h  EditorView.cpp  EditorView.h  Figure.cpp  Figure.h  IFigure.cpp  IFigure.h  README.md  annotated.html  annotated_dup.js  classes.html  files.html  files_dup.js  functions.html  functions_func.html  functions_vars.html  globals.html  globals_enum.html  globals_func.html  globals_type.html  graph_legend.html  hierarchy.html  hierarchy.js  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  inherit_graph_3.map  inherit_graph_3.md5  inherit_graph_4.map  inherit_graph_4.md5  inherits.html  (+10 more)
.github/workflows/: release.yml
d0/d16/: EditorModel_8cpp__incl.map  EditorModel_8cpp__incl.md5
d0/d30/: md_README.html
d0/dfd/: EditorController_8h__dep__incl.map  EditorController_8h__dep__incl.md5
d2/d41/: EditorController_8h.html  EditorController_8h.js  EditorController_8h_source.html
d2/d51/: classTriangle.html  classTriangle.js
d2/d63/: namespaceTypeID.html
search/: all_1.js  all_10.js  all_11.js  all_14.js  all_2.js  all_4.js  all_5.js  all_6.js  all_9.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_9.js  functions_a.js  functions_b.js  (+8 more)
(+86 files in other folders)
